fixed 2 little issues which broke the theme on meta.discourse.org - "--header-top" is a reserved name in newer versions - timeline max-height is needed to avoid overflowing onto date buttons

--- a/lw-koZ.css
+++ b/lw-koZ.css
@@ -29,8 +29,8 @@
     /* shadows */
     --menu-shadow-color: #00000060;
     /* page header */
-    --header-top: #2f2d2a;
-    --header-bot: #2f2d2a;
+    --header-bg-top: #2f2d2a;
+    --header-bg-bot: #2f2d2a;
     --header-border: #474748;
     /* --header-icon-fg-hover: #000; */
     /* --header-icon-bg-hover: #ddf; */
