--- a/tk-night-candy.css
+++ b/tk-night-candy.css
@@ -28,8 +28,8 @@
     --button-shadows: 0.1em 0.1em 0.2em var(--shadow-color);
     --table-shadows: var(--post-shadows);
     /* page header */
-    --header-top: #3e3e52;
-    --header-bot: #2b2b3c;
+    --header-bg-top: #3e3e52;
+    --header-bg-bot: #2b2b3c;
     --header-border: #242433;
     --header-icon-fg: #000;
     --header-icon-bg: #88e;
